undo left scrollbar due to jScrollPane bug

--- a/gmxApplication.css
+++ b/gmxApplication.css
@@ -64,4 +64,6 @@
 
 .gmxApplication_withLeftSidebar.gmxApplication_sidebarShift .leaflet-left .leaflet-control { margin-left: 325px; }
 .gmxApplication_withLeftSidebar.gmxApplication_sidebarShift .leaflet-left.leaflet-right .leaflet-control { margin-left: 0px; }
-.gmxApplication_withLeftSidebar .iconSidebarControl .jspVerticalBar { left: 0; }
+
+/* there is a bug in jScrollPane (margin-left without srollbar), so we can't place scrollbar to the left */
+/*.gmxApplication_withLeftSidebar .iconSidebarControl .jspVerticalBar { left: 0; }*/
